added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -4,8 +4,8 @@
   publisher = {Indiana University Mathematics Journal},
   volume = {46},
   number = {3},
-  pages = {0--0},
-  author = {Philippe  Biane},
+  pages = {705-718},
+  author = {Philippe Biane},
   title = {{On the free convolution with a semi-circular distribution}},
   journal = {Indiana University Mathematics Journal},
 }
