using free probability theory to determine density of wigner+laplacian

--- a/smllnas5728.tex
+++ b/smllnas5728.tex
@@ -299,7 +299,7 @@ matrices in terms of the free convolutions $[]$ the individual limiting
 densities, provided that these densities have compact support~\cite{}.
 The following expressions for the free convolution of a semicircle distrubtion
 $\cap(\lambda|J)$ with an arbitrary compact distrubtion $\mu(\lambda)$ can be
-used when one of these matrices comes from a Wigner Ensemble~\cite{}.
+used when one of these matrices comes from a Wigner Ensemble~\cite{Biane_1997}.
 \begin{align}
   \mathcal{H}[\rho\circ\psi(\lambda|J)]=
   \int_{\mathbb{R}}\frac{(\lambda-\lambda')\mu(\lambda')\mathrm{d}\lambda'}{(\lambda-\lambda')^2+E(\lambda|J)^2}
@@ -325,4 +325,7 @@ used when one of these matrices comes from a Wigner Ensemble~\cite{}.
 values of the order parameter $\mu$ which introduces one/two dimensional laplacian}
 \label{fig:spectrum}
 \end{figure}
+
+\bibliography{bibliography/biblio}
+\bibliographystyle{ieeetr}
 \end{document}
