numerical evidence for infinum formula

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -9,3 +9,12 @@
   title = {{On the free convolution with a semi-circular distribution}},
   journal = {Indiana University Mathematics Journal},
 }
+@article{Novak2012,
+  archivePrefix = {arXiv},
+  arxivId = {arXiv:1205.2097v1},
+  author = {Novak, Jonathan},
+  eprint = {arXiv:1205.2097v1},
+  title = {{Three Lectures on Free Probability}},
+  url = {https://arxiv.org/pdf/1205.2097.pdf},
+  year = {2012}
+}
